crates/nm-collect-ubiquiti/tests/snapshots/parsers__synthetic-wa-8.7.11_version.snap
---
source: crates/nm-collect-ubiquiti/tests/parsers.rs
expression: "parse::version::parse(&read(\"version.txt\")).unwrap()"
---
{
  "platform": "WA",
  "soc": "ar934x",
  "version": "8.7.11",
  "build": "33347"
}
