crates/nm-collect-ubiquiti/tests/snapshots/parsers__synthetic-xw-6.3.6_board.snap
---
source: crates/nm-collect-ubiquiti/tests/parsers.rs
expression: "parse::board_info::parse(&read(\"board-info.txt\")).unwrap()"
---
{
  "sysid": "0xe005",
  "name": "NanoStation M5",
  "shortname": "XW",
  "hwaddr": "02:00:00:00:00:01",
  "subtype": "0"
}
