crates/nm-collect-ubiquiti/tests/snapshots/parsers__synthetic-xw-6.3.6_config.snap
---
source: crates/nm-collect-ubiquiti/tests/parsers.rs
expression: "parse::system_cfg::parse(&read(\"system.cfg\")).unwrap()"
---
{
  "system": {
    "hostname": "fixture-host-1",
    "model": null,
    "firmware": null,
    "uptime_seconds": null,
    "loadavg": null,
    "cpu_count": null,
    "memory": null,
    "serial": null,
    "ntp_servers": [
      "192.0.2.10"
    ],
    "offload": null,
    "ssh_host_key_changed": null,
    "ssh_legacy_algorithms": null,
    "cpu_load_pct": null,
    "genuine": null,
    "platform": null,
    "soc": null,
    "firmware_build": null,
    "board_id": null,
    "netrole": "bridge"
  },
  "interfaces": [
    {
      "name": "eth0",
      "mac": null,
      "description": null,
      "admin_up": true,
      "oper_up": null,
      "speed_mbps": null,
      "duplex": null,
      "counters": null,
      "addresses": [
        "192.0.2.1/255.255.255.0"
      ],
      "role": null,
      "role_confidence": null,
      "firewall_in": null,
      "firewall_out": null,
      "firewall_local": null
    }
  ],
  "addresses": [],
  "radio": {
    "mode": null,
    "ssid": "fixture-ssid-1",
    "frequency_mhz": 5805,
    "channel_width_mhz": 20,
    "tx_power_dbm": 18,
    "noise_floor_dbm": null,
    "chains": [],
    "ccq_pct": null,
    "airtime_pct": null,
    "tx_rate_mbps": null,
    "rx_rate_mbps": null,
    "stations": [],
    "airmax": null,
    "distance_m": null,
    "mcs": null,
    "signal_dbm": null,
    "polling_enabled": null,
    "mac": null,
    "throughput_mbps": null,
    "security": "wpa2",
    "ssid_hidden": false,
    "country_code": 608,
    "country_obey": true
  },
  "routing": {
    "routes": [
      {
        "prefix": "0.0.0.0",
        "protocol": null,
        "next_hop": "192.0.2.254",
        "interface": "eth0",
        "metric": null
      }
    ],
    "ospf_neighbors": [],
    "ospf_interfaces": [],
    "bgp_peers": [],
    "router_id": null,
    "protocol_counts": {}
  },
  "services": {
    "http": {
      "enabled": true,
      "port": 80,
      "listen_addresses": []
    },
    "https": {
      "enabled": true,
      "port": null,
      "listen_addresses": []
    },
    "ssh": {
      "enabled": true,
      "port": null,
      "listen_addresses": []
    },
    "telnet": {
      "enabled": false,
      "port": null,
      "listen_addresses": []
    },
    "snmp": {
      "enabled": true,
      "port": null,
      "community_present": true,
      "community_is_default": null
    },
    "upnp": {
      "enabled": false,
      "port": null,
      "listen_addresses": []
    },
    "discovery": {
      "enabled": false,
      "port": null,
      "listen_addresses": []
    },
    "ntp": {
      "enabled": true,
      "port": null,
      "listen_addresses": []
    },
    "dhcp_client": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "dhcp_server": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "pppoe": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    }
  },
  "dhcp": null,
  "firewall": null,
  "config": {
    "format": "KeyValue",
    "text": "sshd.status=enabled\r\ntelnetd.status=disabled\r\nhttpd.status=enabled\r\nhttpd.https.status=enabled\r\nhttpd.port=80\r\nsnmp.status=enabled\r\nsnmp.community=<redacted>\ndiscovery.status=disabled\r\nntpclient.status=enabled\r\nntpclient.1.server=192.0.2.10\r\nupnpd.status=disabled\r\nnetmode=bridge\r\nwireless.1.ssid=fixture-ssid-1\r\nwireless.1.security=wpa2\r\nwireless.1.hide_ssid=disabled\r\nradio.1.freq=5805\r\nradio.1.chanbw=20\r\nradio.1.txpower=18\r\nradio.1.countrycode=608\r\nradio.1.obey=enabled\r\nusers.1.name=operator\r\nusers.1.password=<redacted>\nresolv.host.1.name=fixture-host-1\r\nnetconf.1.devname=eth0\r\nnetconf.1.ip=192.0.2.1\r\nnetconf.1.netmask=255.255.255.0\r\nnetconf.1.status=enabled\r\nroute.1.ip=0.0.0.0\r\nroute.1.gateway=192.0.2.254\r\nroute.1.devname=eth0\r\n",
    "secrets_removed": 2
  },
  "neighbors": []
}
