crates/nm-collect-ubiquiti/tests/snapshots/parsers__synthetic-xw-6.3.6_stations.snap
---
source: crates/nm-collect-ubiquiti/tests/parsers.rs
expression: "parse::wstalist::parse(&read(\"wstalist.json\")).unwrap()"
---
[]
