crates/nm-collect-ubiquiti/tests/snapshots/parsers__synthetic-xw-6.3.6_version.snap
---
source: crates/nm-collect-ubiquiti/tests/parsers.rs
expression: "parse::version::parse(&read(\"version.txt\")).unwrap()"
---
{
  "platform": "XW",
  "soc": "ar934x",
  "version": "6.3.6",
  "build": "33347"
}
